--- a/build.gradle
+++ b/build.gradle
@@ -14,16 +14,12 @@ subprojects {
 
 project(':core') {
     dependencies {
-        compile group: 'com.ui4j', name: 'ui4j-all', version: '1.1.0'
+        compile group: 'com.ui4j', name: 'ui4j-api', version: '2.1.0'
         compile group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.core', version: '3.10.0'
     }
 }
 
 project(':scattering') {
-    if (!hasProperty('mainClass')) {
-        ext.mainClass = 'it.unisa.gitdm.experiments.CompleteScatteringExperimen'
-    }
-
     dependencies {
         compile project(':core')
         compile group: 'nz.ac.waikato.cms.weka', name: 'weka-dev', version: '3.7.12'
